--- a/Vidly/Vidly.csproj
+++ b/Vidly/Vidly.csproj
@@ -35,6 +35,7 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <LangVersion>7.2</LangVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -44,6 +45,7 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <LangVersion>7.2</LangVersion>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Microsoft.CSharp" />
@@ -196,18 +198,83 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\Startup.Auth.cs" />
     <Compile Include="Controllers\AccountController.cs" />
+    <Compile Include="Controllers\CustomersController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
+    <Compile Include="Migrations\201809170746548_InitialCreate.cs" />
+    <Compile Include="Migrations\201809170746548_InitialCreate.Designer.cs">
+      <DependentUpon>201809170746548_InitialCreate.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201810010924215_InitialModel.cs" />
+    <Compile Include="Migrations\201810010924215_InitialModel.Designer.cs">
+      <DependentUpon>201810010924215_InitialModel.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201810011018253_AddIsSubscribedToCustomer.cs" />
+    <Compile Include="Migrations\201810011018253_AddIsSubscribedToCustomer.Designer.cs">
+      <DependentUpon>201810011018253_AddIsSubscribedToCustomer.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201810011021553_AddMembershipType.cs" />
+    <Compile Include="Migrations\201810011021553_AddMembershipType.Designer.cs">
+      <DependentUpon>201810011021553_AddMembershipType.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201810011023355_PopulateMembershipTypes.cs" />
+    <Compile Include="Migrations\201810011023355_PopulateMembershipTypes.Designer.cs">
+      <DependentUpon>201810011023355_PopulateMembershipTypes.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201810011044344_ApplyAnnotationsToCustomerName.cs" />
+    <Compile Include="Migrations\201810011044344_ApplyAnnotationsToCustomerName.Designer.cs">
+      <DependentUpon>201810011044344_ApplyAnnotationsToCustomerName.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201810011120546_AddedNameToMembershipType.cs" />
+    <Compile Include="Migrations\201810011120546_AddedNameToMembershipType.Designer.cs">
+      <DependentUpon>201810011120546_AddedNameToMembershipType.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201810011121427_UpdateMembershipTypes.cs" />
+    <Compile Include="Migrations\201810011121427_UpdateMembershipTypes.Designer.cs">
+      <DependentUpon>201810011121427_UpdateMembershipTypes.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201810011138228_AddedBirthdateToCustomerModel.cs" />
+    <Compile Include="Migrations\201810011138228_AddedBirthdateToCustomerModel.Designer.cs">
+      <DependentUpon>201810011138228_AddedBirthdateToCustomerModel.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201810011147565_AddedGenreTable.cs" />
+    <Compile Include="Migrations\201810011147565_AddedGenreTable.Designer.cs">
+      <DependentUpon>201810011147565_AddedGenreTable.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201810011148332_PopulateGenreTable.cs" />
+    <Compile Include="Migrations\201810011148332_PopulateGenreTable.Designer.cs">
+      <DependentUpon>201810011148332_PopulateGenreTable.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201810011156117_AddedColumnsToMovieModel.cs" />
+    <Compile Include="Migrations\201810011156117_AddedColumnsToMovieModel.Designer.cs">
+      <DependentUpon>201810011156117_AddedColumnsToMovieModel.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201810011214428_AnnotationsToMovie.cs" />
+    <Compile Include="Migrations\201810011214428_AnnotationsToMovie.Designer.cs">
+      <DependentUpon>201810011214428_AnnotationsToMovie.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201810011253374_Update.cs" />
+    <Compile Include="Migrations\201810011253374_Update.Designer.cs">
+      <DependentUpon>201810011253374_Update.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
+    <Compile Include="Models\Genre.cs" />
+    <Compile Include="Models\MembershipType.cs" />
+    <Compile Include="Models\Movie.cs" />
+    <Compile Include="Controllers\MoviesController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Models\AccountViewModels.cs" />
+    <Compile Include="Models\Customer.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
+    <Compile Include="ViewModels\NewCustomerViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Content\bootstrap-Cerulea.css" />
     <Content Include="Content\bootstrap-theme.css" />
     <Content Include="Content\bootstrap-theme.min.css" />
     <Content Include="Content\bootstrap.css" />
@@ -266,6 +333,12 @@
     <Content Include="Views\Manage\VerifyPhoneNumber.cshtml" />
     <Content Include="Views\Shared\Lockout.cshtml" />
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
+    <Content Include="Views\Shared\_NavBar.cshtml" />
+    <Content Include="Views\Customers\Details.cshtml" />
+    <Content Include="Views\Customers\Index.cshtml" />
+    <Content Include="Views\Movies\Index.cshtml" />
+    <Content Include="Views\Movies\Details.cshtml" />
+    <Content Include="Views\Customers\New.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -282,6 +355,50 @@
     <None Include="packages.config" />
     <Content Include="Scripts\jquery-3.3.1.slim.min.map" />
     <Content Include="Scripts\jquery-3.3.1.min.map" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\201809170746548_InitialCreate.resx">
+      <DependentUpon>201809170746548_InitialCreate.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201810010924215_InitialModel.resx">
+      <DependentUpon>201810010924215_InitialModel.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201810011018253_AddIsSubscribedToCustomer.resx">
+      <DependentUpon>201810011018253_AddIsSubscribedToCustomer.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201810011021553_AddMembershipType.resx">
+      <DependentUpon>201810011021553_AddMembershipType.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201810011023355_PopulateMembershipTypes.resx">
+      <DependentUpon>201810011023355_PopulateMembershipTypes.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201810011044344_ApplyAnnotationsToCustomerName.resx">
+      <DependentUpon>201810011044344_ApplyAnnotationsToCustomerName.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201810011120546_AddedNameToMembershipType.resx">
+      <DependentUpon>201810011120546_AddedNameToMembershipType.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201810011121427_UpdateMembershipTypes.resx">
+      <DependentUpon>201810011121427_UpdateMembershipTypes.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201810011138228_AddedBirthdateToCustomerModel.resx">
+      <DependentUpon>201810011138228_AddedBirthdateToCustomerModel.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201810011147565_AddedGenreTable.resx">
+      <DependentUpon>201810011147565_AddedGenreTable.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201810011148332_PopulateGenreTable.resx">
+      <DependentUpon>201810011148332_PopulateGenreTable.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201810011156117_AddedColumnsToMovieModel.resx">
+      <DependentUpon>201810011156117_AddedColumnsToMovieModel.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201810011214428_AnnotationsToMovie.resx">
+      <DependentUpon>201810011214428_AnnotationsToMovie.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201810011253374_Update.resx">
+      <DependentUpon>201810011253374_Update.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
